--- a/quickstart/public/index.html
+++ b/quickstart/public/index.html
@@ -16,11 +16,11 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsible-content">
-        <ul class="navbar-nav mr-auto">
+        <!--<ul class="navbar-nav mr-auto">
           <li class="nav-item">
             <a class="nav-link" href="/examples">More Examples</a>
           </li>
-        </ul>
+        </ul> -->
         <button class="btn btn-outline-primary" id="leave-room">Leave Room</button>
       </div>
     </nav>
@@ -83,10 +83,6 @@
                 <h5 class="modal-title" id="join-room-label">Video Chat</h5>
               </div>
               <div class="modal-body">
-                <div class="form-group">
-                  <label id="room-name-label" for="room-name">Room Name</label>
-                  <input id="room-name" class="form-control" type="text" />
-                </div>
                 <div class="form-group">
                   <label id="screen-name-label" for="screen-name">User Name</label>
                   <input id="screen-name" class="form-control" type="text" />
